--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                   },
                   yAxis: {
                       title: {
-                          text: 'Units'
-                      }
+                          text: 'Number of FSA meat inspectors'
+                      },
+                    min: 200
                   }
               });
             });
