--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
         </script>
 
         <!-- 3. Add the container -->
-        <div id="container" style="width: 600px; height: 400px; margin: 0 auto"></div>
+        <div id="container" style="width: 100%; height: 100%; margin: 0 auto"></div>
     </body>
 </html>
